# backend/internal/rolepermissions/dto.go
@@ -1,5 +1,6 @@
 package rolepermissions
 
+// AssignPermissionRequest represents the request payload to assign a permission to a role.
 type AssignPermissionRequest struct {
-	PermissionID string `json:"permission_id" binding:"required,uuid"`
+	PermissionID string `json:"permission_id" validate:"required,uuid"`
 }
